--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,7 +24,7 @@ jobs:
       - name: install pip packages
         run: |
           python -m pip install --upgrade pip
-          pip3 install -r .github/requirements.txt
+          pip3 install -r requirements.txt
       - name: weixin
         run: |
           python3 main.py
